# mytorch

./: README.md  mytorch.py  pyproject.toml
src/mytorch.egg-info/: PKG-INFO  SOURCES.txt
