[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mytorch"
version = "0.1.0"
description = "A minimal PyTorch-like deep learning library"
authors = [
    { name = "d0lph1n", email = "you@example.com" }
]
readme = "README.md"
requires-python = ">=3.9"

dependencies = [
    "numpy"
]

[project.optional-dependencies]
dev = [
    "pytest",
    "black",
    "ruff"
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]

